// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InterestTopics should render 1`] = `
<div>
  <div
    class="settings-base-page-root"
  >
    <div
      class="maintenance-alert-root"
    />
    <ol
      class="breadcrumb breadcrumbs-root"
    >
      <li
        class="breadcrumb-item"
      >
        <a
          class="breadcrumb-text-truncate breadcrumb-link"
          href="/workspace/23/settings/definitions"
        >
          Definitions
        </a>
      </li>
      <li
        class="breadcrumb-item active"
      >
        <span
          class="breadcrumb-text-truncate"
        >
          Interest Topics
        </span>
      </li>
    </ol>
    <div
      class="content-header"
    >
      <div
        class="header-text"
      >
        <div
          class="d-flex"
        >
          <h3
            class="title-text text-truncate"
          >
            <span
              class="text-truncate"
              data-tooltip="false"
              title=""
            >
              Interest Topics
            </span>
          </h3>
        </div>
        <div
          class="description"
        >
          <p>
            Approximates what topics individuals are interested in based on their interactions with registered touchpoints.
            <br />
            Liferay Analytics Cloud automatically associates registered touchpoints with keywords based on their meta tags, titles and descriptions.
          </p>
          <div
            class="h4"
          >
            Keywords Blocklist
          </div>
          <p>
            Keywords can be excluded by adding them to a blocklist. Manage the keywords that you do not want listed in Liferay Analytics Cloud, and do not want them to be used to generate content recommendation in Liferay DXP.
          </p>
        </div>
      </div>
      <div
        class="page-actions-container"
      />
    </div>
    <div>
      <div
        class="card card-root page-display"
      >
        <div
          class="toolbar-root"
        >
          <nav
            class="navbar navbar-root management-bar management-bar-light navbar-expand"
          >
            <div
              class="container-fluid"
            >
              <ul
                class="nav-root front-nav navbar-nav"
                role="tablist"
              >
                <li
                  class="nav-item"
                  role="presentation"
                >
                  <div
                    class="custom-control custom-checkbox"
                  >
                    <label>
                      <input
                        class="custom-control-input"
                        data-testid="select-all-checkbox"
                        type="checkbox"
                        value="false"
                      />
                      <span
                        class="custom-control-label"
                      />
                    </label>
                  </div>
                </li>
                <li
                  class="nav-item"
                  role="presentation"
                >
                  <a
                    class="btn-root nav-link nav-link-monospaced btn btn-outline-borderless btn-outline-unstyled"
                    href="/?field=keyword&page=1&sortOrder=DESC"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-order_arrow_ascending icon-root"
                      role="presentation"
                    >
                      <use
                        href="#order_arrow_ascending"
                      />
                    </svg>
                  </a>
                </li>
              </ul>
              <div
                class="navbar-form navbar-form-autofit"
              >
                <div
                  class="input-group search"
                >
                  <div
                    class="input-group-item"
                  >
                    <input
                      class="input-root form-control input-group-inset input-group-inset-after"
                      maxlength="900"
                      placeholder="Search"
                      type="text"
                      value=""
                    />
                    <div
                      class="input-group-inset-item input-group-inset-item-after"
                    >
                      <button
                        aria-label="Search"
                        class="button-root btn btn-unstyled"
                        type="button"
                      >
                        <svg
                          class="lexicon-icon lexicon-icon-search icon-root"
                          role="presentation"
                        >
                          <use
                            href="#search"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <ul
                class="nav-root navbar-nav"
                role="tablist"
              >
                <li
                  class="nav-item"
                  role="presentation"
                >
                  <button
                    class="button-root nav-btn btn btn-primary"
                    type="button"
                  >
                    Add Keyword
                  </button>
                </li>
              </ul>
            </div>
          </nav>
        </div>
        <div
          class="table-responsive table-root flex-grow-1"
        >
          <table
            class="table table-autofit table-hover table-heading-nowrap table-nowrap"
          >
            <thead>
              <tr>
                <th />
                <th
                  class="table-head-title table-cell-expand"
                >
                  <a
                    class="button-root inline-item text-truncate-inline btn btn-unstyled"
                    href="/?field=keyword&page=1&sortOrder=DESC"
                  >
                    <span
                      class="text-truncate"
                    >
                      Keyword
                    </span>
                    <span
                      class="inline-item inline-item-after"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-order-arrow-up icon-root"
                        role="presentation"
                      >
                        <use
                          href="#order-arrow-up"
                        />
                      </svg>
                    </span>
                  </a>
                </th>
                <th
                  class="table-head-title"
                >
                  <a
                    class="button-root inline-item text-truncate-inline btn btn-unstyled"
                    href="/?field=createDate&page=1&sortOrder=DESC"
                  >
                    <span
                      class="text-truncate"
                    >
                      Added
                    </span>
                  </a>
                </th>
                <th />
              </tr>
            </thead>
            <tbody>
              <tr
                class="clickable"
              >
                <td>
                  <div
                    class="custom-control custom-checkbox"
                  >
                    <label>
                      <input
                        class="custom-control-input"
                        type="checkbox"
                        value="false"
                      />
                      <span
                        class="custom-control-label"
                      />
                    </label>
                  </div>
                </td>
                <td
                  class="table-cell-expand"
                >
                  <div
                    class="h4 table-title text-truncate"
                  >
                    bar-0
                  </div>
                </td>
                <td>
                  Dec 3, 2019
                </td>
                <td
                  class="row-inline-actions"
                >
                  <span>
                    <button
                      aria-label="Delete"
                      class="button-root btn btn-outline-borderless btn-sm btn-outline-secondary"
                      type="button"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-trash icon-root"
                        role="presentation"
                      >
                        <use
                          href="#trash"
                        />
                      </svg>
                    </button>
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <nav
          class="navbar navbar-root pagination-bar-root"
        >
          <div
            class="container-fluid"
          >
            <div
              class="dropdown dropdown-root pagination-items-per-page"
            >
              <button
                aria-controls="clay-dropdown-menu-1"
                aria-expanded="false"
                aria-haspopup="true"
                class="dropdown-toggle button-root btn btn-sm btn-secondary"
                type="button"
              >
                2 Items
                <svg
                  class="lexicon-icon lexicon-icon-caret-bottom ml-2"
                  role="presentation"
                >
                  <use
                    href="#caret-bottom"
                  />
                </svg>
              </button>
            </div>
            <div
              class="pagination-results"
            >
              Showing 1 to 1 of 1 entry.
            </div>
            <ul
              class="pagination pagination-root"
            >
              <li
                class="page-item disabled"
              >
                <a
                  class="button-root btn btn-unstyled page-link"
                  disabled=""
                  href="/?page=0"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-angle-left-small icon-root"
                    role="presentation"
                  >
                    <use
                      href="#angle-left-small"
                    />
                  </svg>
                </a>
              </li>
              <li
                class="page-item active"
              >
                <a
                  class="button-root btn btn-unstyled page-link"
                  href="/?page=1"
                >
                  1
                </a>
              </li>
              <li
                class="page-item disabled"
              >
                <a
                  class="button-root btn btn-unstyled page-link"
                  disabled=""
                  href="/?page=2"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-angle-right-small icon-root"
                    role="presentation"
                  >
                    <use
                      href="#angle-right-small"
                    />
                  </svg>
                </a>
              </li>
            </ul>
          </div>
        </nav>
      </div>
    </div>
  </div>
</div>
`;

exports[`InterestTopics should render page not found puts a invalid page 1`] = `
<div
  class="no-results-root flex-grow-1"
>
  <div
    class="no-results-content"
  >
    <div
      class="h4 no-results-title"
    >
      Page Not Found
    </div>
    <a
      class="button-root btn btn-secondary"
      href="/workspace/23/settings/definitions/interest-topics"
    >
      Back to Interest Topics
    </a>
  </div>
</div>
`;

exports[`InterestTopics should render with a member-specific message to add keywords if there are none 1`] = `
<div
  class="no-results-root flex-grow-1 no-results-primary"
>
  <div
    class="no-results-content"
  >
    <div
      class="no-results-icon"
    >
      <svg
        class="lexicon-icon lexicon-icon-ac_satellite icon-root icon-size-xxxl"
        role="presentation"
      >
        <use
          href="#ac_satellite"
        />
      </svg>
    </div>
    <div
      class="h4 no-results-title"
    >
      No Keywords Found
    </div>
    <div
      class="no-results-description"
    >
      Please contact your site administrator to add keywords.
    </div>
  </div>
</div>
`;

exports[`InterestTopics should render with a message to add keywords if there are none 1`] = `
<div
  class="no-results-root flex-grow-1 no-results-primary"
>
  <div
    class="no-results-content"
  >
    <div
      class="no-results-icon"
    >
      <svg
        class="lexicon-icon lexicon-icon-ac_satellite icon-root icon-size-xxxl"
        role="presentation"
      >
        <use
          href="#ac_satellite"
        />
      </svg>
    </div>
    <div
      class="h4 no-results-title"
    >
      No Keywords Found
    </div>
    <div
      class="no-results-description"
    >
      Add a keyword to be blocked.
      <a
        class="d-block mb-3"
        href="https://learn.liferay.com/w/dxp/personalization/analytics-cloud/workspace-data/definitions"
        rel="noreferrer noopener"
        target="_blank"
      >
        Learn more about interest topics.
        <span
          class="sr-only"
        >
          (Opens a new window)
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`InterestTopics should render with an empty state 1`] = `
<div
  class="no-results-root flex-grow-1"
>
  <div
    class="no-results-content"
  >
    <div
      class="no-results-icon"
    >
      <svg
        class="lexicon-icon lexicon-icon-ac_no_results_found icon-root icon-size-xxxl"
        role="presentation"
      >
        <use
          href="#ac_no_results_found"
        />
      </svg>
    </div>
    <div
      class="h4 no-results-title"
    >
      There are no results found.
    </div>
    <div
      class="no-results-description"
    >
      Please try a different search term.
    </div>
  </div>
</div>
`;
